seaqt/QtWebEngineCore/gen_qwebenginescriptcollection.h

class QWebEngineScript;
class QWebEngineScriptCollection;
typedef struct QWebEngineScript QWebEngineScript;
typedef struct QWebEngineScriptCollection QWebEngineScriptCollection;
bool QWebEngineScriptCollection_isEmpty(const QWebEngineScriptCollection* self);
int QWebEngineScriptCollection_count(const QWebEngineScriptCollection* self);
bool QWebEngineScriptCollection_contains(const QWebEngineScriptCollection* self, QWebEngineScript* value);
struct miqt_array /* of QWebEngineScript* */  QWebEngineScriptCollection_find(const QWebEngineScriptCollection* self, struct miqt_string name);
void QWebEngineScriptCollection_insert(QWebEngineScriptCollection* self, QWebEngineScript* param1);
void QWebEngineScriptCollection_insertWithList(QWebEngineScriptCollection* self, struct miqt_array /* of QWebEngineScript* */  list);
bool QWebEngineScriptCollection_remove(QWebEngineScriptCollection* self, QWebEngineScript* param1);
void QWebEngineScriptCollection_clear(QWebEngineScriptCollection* self);
struct miqt_array /* of QWebEngineScript* */  QWebEngineScriptCollection_toList(const QWebEngineScriptCollection* self);